--- a/asad.css
+++ b/asad.css
@@ -1,3 +1,7 @@
-.h1{
-  background-color: black;
+.city{
+  background-color: tomato;
+  color: white;
+  border: 2px solid black;
+  Margin: 20px;
+  padding: 20px;
 }
