--- a/asad.css
+++ b/asad.css
@@ -1,6 +1,19 @@
 body{
-    font-family: 'Salsa', cursive;
+    font-family: 'Instrument Serif', serif;
 }
-.Bangladesh{
-    font-size: 100px;
+
+h1{
+    font-size: 50px;
+}
+.name-highlight{
+    color: orange;
+}
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+}
+.half-width img{
+    width: 100%;
 }
