--- a/asad.css
+++ b/asad.css
@@ -1,19 +1,74 @@
 body{
     font-family: 'Instrument Serif', serif;
+    margin: 0px;
 }
 
 h1{
     font-size: 50px;
 }
-.name-highlight{
+.orange-highlight{
     color: orange;
 }
 .half-width{
     width: 40%;
-    float: left;
+   float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
 .half-width img{
     width: 100%;
+}
+.top-banner{
+    background-image: url("web-portfolio/top-banner.png");
+    background-repeat: no-repeat;
+
+}
+p{
+    color: dimgray;
+}
+section{
+    height: 500px;
+    padding-bottom: 50px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient( 45deg, lightsalmon,tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700px;
+}
+
+.h2{
+    font-size: 40px;
+}
+.dream-area{
+background-image: url(web-portfolio/dream-bg.png);
+background-repeat: no-repeat;
+background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+}
+.experiance-area{
+    background-image: url("web-portfolio/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg,lightsalmon,tomato );
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+} 
+.footer p{
+    text-align: center;
+    font-size 5px;
+
 }
